--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Ms Remote</string>
+    <string name="app_name">Home Remote Control</string>
     <string name="log_name">msremote</string>
 </resources>
