--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Home Remote Control</string>
+    <string name="blank"></string>
+    <string name="showstowatch">Shows To Watch</string>
+    <string name="upcomingshows">Upcoming Shows</string>
 </resources>
