--- a/README
+++ b/README
@@ -8,3 +8,4 @@ from any device that can access the internet.  This program is made
 for an android phone, allowing for control of a music and movie player,
 and for aquiring a list of upcoming tvshows.
 
+Some icons by Glyphish
