--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -51,5 +51,6 @@
     <string name="video_path_summary">The Path the the root of the NFS server</string>
     <string name="done_watching_show">Have you finished Watching this Show?</string>
     <string name="bad_password">Bad Password</string>
+    <string name="watch_next">Watch Next Episode</string>
     
 </resources>
