--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="quit">Quit</string>
     <string name="by">by</string>
     <string name="from">from</string>
+    <string name="duration">Duration</string>
     <string name="of">of</string>
     <string name="previous">Previous</string>
     <string name="next">Next</string>
@@ -56,5 +57,5 @@
     <string name="watch_next">Watch Next Episode</string>
     <string name="about_main">Written by Kevin Anthony</string>
     <string name="about_version">Version:</string>
-    
+
 </resources>
